--- a/prijateli_tree/_templates/global/Page.html
+++ b/prijateli_tree/_templates/global/Page.html
@@ -1,8 +1,6 @@
 {% extends "otree/Page.html" %}
 {% load otree static %}
-
-{% block global_styles  %}
-{% endblock %}
-
-{% block global_scripts  %}
-{% endblock %}
+{% block global_styles %}
+{% endblock global_styles %}
+{% block global_scripts %}
+{% endblock global_scripts %}
